[package]
name = "map-randomiser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "crates/builder" }
world_core = { path = "crates/world_core" }
visualiser = { path = "crates/visualiser" }

[workspace]
members = ["crates/world_core", "crates/builder", "crates/visualiser"]
