[package]
name = "world_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
konst = "0.3.6"
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0.192", features = ["derive"] }
